--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.1.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "request": "^2.88.2"
   }
 }
