--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "discord.js": "^12.1.1",
     "http": "0.0.1-security",
     "request": "^2.88.2"
+  },
+
+  "nodemonConfig": {
+  	"ignore": ["*.json"]
   }
 }
